Make the statusbar space info use the new KIO::fileSystemFreeSpace job.

REVIEW: 120137
BUG: 245226